feat(minio): install minio in nodejs

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "ViniciusLaureano",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "minio": "^8.0.2"
+  }
 }
