--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MinIO Connection Test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "minio": ".\\minio.exe server .\\src\\docs --console-address :9090"
   },
   "keywords": [],
   "author": "ViniciusLaureano",
