--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "minio": ".\\minio.exe server .\\src\\docs --console-address :9090",
-    "dev": "node --watch src/server.js"
+    "dev": "node --watch src/server.js",
+    "start:all": "concurrently \"npm run minio\" \"npm run dev\""
   },
   "keywords": [],
   "author": "ViniciusLaureano",
@@ -16,5 +17,8 @@
     "express": "^4.21.2",
     "minio": "^8.0.2",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.0"
   }
 }
